# ddbbBackend

./: build.sh  pyproject.toml
core/: settings.py  urls.py
drfauth/: models.py  serializers.py  urls.py  views.py
drfauth/migrations/: 0001_initial.py  0002_alter_customusermodel_userid.py  0003_alter_customusermodel_userid.py  0004_alter_customusermodel_userid.py
logic/: models.py  serializers.py  urls.py  views.py
logic/migrations/: 0001_initial.py
